--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -7,7 +7,7 @@
     </div>
     <hr class="hr">
     <div class="p-3">
-       <form [formGroup]="editProfileFormGroup" (submit)="editProfile()">
+       <form [formGroup]="editProfileFormGroup">
           <div class="d-flex justify-content-center" (click)="selectImage()">
              <img class="photo-container" style="object-fit: none;"
                 [src]="image?.base64String ? 'data:image/'+image?.format+ ';base64,' + image?.base64String : 'assets/images/ic_defaultcamera.svg'"
@@ -18,27 +18,25 @@
              <div class="sub-mini-label mt-4">Phone Number</div>
              <div class="d-flex">
                 <mat-form-field appearance="outline" class="w-100 flex-grow-1">
-                   <input formControlName="phoneNumber" matInput placeholder="Phone Number" maxlength="12" value="{{(homeOwner$ | async)?.phoneNumber}}">
+                   <input formControlName="phoneNumber" matInput placeholder="Phone Number" maxlength="12" >
                 </mat-form-field>
              </div>
           </ng-container>
  
           <div class="sub-mini-label mt-4">Name</div>
           <mat-form-field class="w-100" appearance="outline" hideRequiredMarker>
-             <input matInput placeholder="Name" formControlName="name" value="{{(homeOwner$ | async)?.name}}">
+             <input matInput placeholder="Name" formControlName="name">
              <mat-icon class="mat-icon " matSuffix>perm_contact_calendar</mat-icon>
           </mat-form-field>
  
           <div class="sub-mini-label mt-4">Email</div>
           <mat-form-field class="w-100" appearance="outline" hideRequiredMarker>
-             <input matInput placeholder="Email" formControlName="email" value="{{(homeOwner$ | async)?.email}}">
+             <input matInput placeholder="Email" formControlName="email">
           </mat-form-field>
  
           <button mat-flat-button color="primary"
-             class="mat-flat-button w-100 my-3">Save</button>
+             class="mat-flat-button w-100 my-3" (click)="onSave()">Save</button>
  
-          <!-- <button  mat-flat-button color="warn" type="reset"
-             class="mat-flat-button w-100">Remove</button> -->
        </form>
     </div>
  </div>
