--- a/src/app/home-owner/presentation/ui/confirm-reservation/confirm-reservation.component.html
+++ b/src/app/home-owner/presentation/ui/confirm-reservation/confirm-reservation.component.html
@@ -19,24 +19,26 @@
       </div>
     </div>
   </div>
-  <div *ngIf="showPopup" class="d-flex justify-content-between mb-4 dues-popup p-2">
-    <img src="assets/images/ic_defaultuser.svg" class="img-72 ms-1" alt="" />
-    <div>
-      <div class="d-flex justify-content-between mb-1">
-        <div>
-          <div class="label-15-700 color-primary">Outstanding Dues</div>
-          <div class="label-14-400 color-primary">
-            Your annual maintenance is pending.
+  <ng-container *ngFor="let payment of (homeOwner$| async)?.payments;">
+    <div *ngIf="payment.status?.toLowerCase()==='pending'? 'showPopup' :'' " class="d-flex justify-content-between mb-4 dues-popup p-2">
+      <img src="assets/images/ic_defaultuser.svg" class="img-72 ms-1" alt="" />
+      <div>
+        <div class="d-flex justify-content-between mb-1">
+          <div>
+            <div class="label-15-700 color-primary">Outstanding Dues</div>
+            <div class="label-14-400 color-primary">
+              Your annual maintenance is pending.
+            </div>
           </div>
+          <mat-icon (click)="showPopup = false">close</mat-icon>
         </div>
-        <mat-icon (click)="showPopup = false">close</mat-icon>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <label class="label-14-400 color-primary">Amount: BD 10.50</label>
-        <button class="pay-now-button">Pay Now</button>
+        <div class="d-flex justify-content-between align-items-center">
+          <label class="label-14-400 color-primary">Amount: BD 10.50</label>
+          <button class="pay-now-button" routerLink="/home-owner/payments" >Pay Now</button>
+        </div>
       </div>
     </div>
-  </div>
+  </ng-container>
   <button mat-flat-button color="primary" class="mat-flat-button w-100 mb-4" style="color: #fff"
     [disabled]="selectedSlot == undefined" (click)="confirm()">
     Confirm Reservation
