Payment dues notification on main page

--- a/src/app/home-owner/presentation/ui/home/home.component.scss
+++ b/src/app/home-owner/presentation/ui/home/home.component.scss
@@ -40,3 +40,14 @@
     margin-top: 10px;
     ;
 }
+.dues-popup {
+    background-color: #ffac2133;
+    border-radius: 10px;
+}
+.pay-now-button {
+    border: 1px solid transparent;
+    background-color: #5761b2;
+    color: #fff;
+    border-radius: 5px;
+    padding: 5px 20px;
+}
