--- a/src/app/home-owner/presentation/ui/home/home.component.html
+++ b/src/app/home-owner/presentation/ui/home/home.component.html
@@ -41,6 +41,27 @@
         <span></span>
     </div>
 
+    <ng-container *ngFor="let payment of (homeOwner$| async)?.payments;">
+        <div *ngIf="payment.status?.toLowerCase()==='pending'? 'showPopup' :'' " class="d-flex justify-content-between my-3 dues-popup p-2">
+          <img src="assets/images/ic_defaultuser.svg" class="img-72 ms-1" alt="" />
+          <div>
+            <div class="d-flex justify-content-between mb-1">
+              <div>
+                <div class="label-15-700 color-primary">Outstanding Dues</div>
+                <div class="label-14-400 color-primary">
+                  Your annual maintenance is pending.
+                </div>
+              </div>
+              <mat-icon (click)="showPopup = false">close</mat-icon>
+            </div>
+            <div class="d-flex justify-content-between align-items-center">
+              <label class="label-14-400 color-primary">Amount: BD 10.50</label>
+              <button class="pay-now-button" routerLink="/home-owner/payments" >Pay Now</button>
+            </div>
+          </div>
+        </div>
+    </ng-container>
+
     <div class="flex-column-reverse d-flex">
         <div *ngFor="let log of (homeOwner$ | async)?.logs" class="mt-3">
             <app-log [log]="log" (onApprove)="approve(log)" (onDeny)="deny(log)"></app-log>
