--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="bottom-container">
     <div class="img-center">
-      <img class="circular-img" src="{{userImage}}" />
+      <img class="circular-img" src="{{(homeOwner$ | async)?.imageUrl}}" />
     </div>
     <div class="user-info">
       <!-- <div class="header-label">{{userName}}</div> -->
