Loading spinner added

--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <div class="main-container">
 
     <div class="d-flex justify-content-between align-items-center p-3">
@@ -34,7 +35,7 @@
              <input matInput placeholder="Email" formControlName="email">
           </mat-form-field>
  
-          <button mat-flat-button color="primary" [disabled]="!editProfileFormGroup.valid"
+          <button mat-flat-button color="primary"
              class="mat-flat-button w-100 my-3" (click)="onSave()">Save</button>
  
        </form>
