--- a/src/app/home-owner/presentation/ui/booking-summary/booking-summary.component.html
+++ b/src/app/home-owner/presentation/ui/booking-summary/booking-summary.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <app-header [title]="'Booking Summary'" [hideBack]="true"></app-header>
 <div class="main-container h-100 header-padding bkg-color px-3">
   <div class="d-flex flex-column justify-content-between h-100">
