--- a/src/app/home-owner/presentation/ui/reservations/reservations.component.html
+++ b/src/app/home-owner/presentation/ui/reservations/reservations.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <app-header title="Reservations" rightIcon="start_chat" (onRightClick)="openAddReservation()"></app-header>
 <div class="main-container h-100 header-padding bkg-color" style="overflow: scroll;">
     <div class="main-container p-3">
