--- a/src/app/home-owner/presentation/ui/payments/payments.component.html
+++ b/src/app/home-owner/presentation/ui/payments/payments.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <app-header title="Payments"></app-header>
 <div class="main-container h-100 header-padding bkg-color" style="overflow: scroll;">
     <div class="p-3 " style="padding-bottom: 20px !important;">
