--- a/src/app/home-owner/presentation/ui/visitors/visitors.component.html
+++ b/src/app/home-owner/presentation/ui/visitors/visitors.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <div class="main-container">
   <div class="d-flex justify-content-between p-3">
     <span class="title-label">Visitors</span>
