--- a/src/app/security-guard/presentation/ui/home/home.component.html
+++ b/src/app/security-guard/presentation/ui/home/home.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <div class="home-container">
     <div class="d-flex justify-content-between  p-3">
         <img src="assets/images/logo_landing.svg">
