--- a/src/app/security-guard/presentation/ui/search-unit/search-unit.component.html
+++ b/src/app/security-guard/presentation/ui/search-unit/search-unit.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <div class="main-container h-100">
     <div class="d-flex justify-content-between px-3 pt-3">
         <mat-icon (click)="back()">chevron_left</mat-icon>
