--- a/src/app/security-guard/presentation/ui/select-visitor/select-visitor.component.html
+++ b/src/app/security-guard/presentation/ui/select-visitor/select-visitor.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <div class="main-container">
     <div class="d-flex justify-content-between p-3">
         <mat-icon (click)="back()">chevron_left</mat-icon>
