--- a/src/app/terms/terms.component.html
+++ b/src/app/terms/terms.component.html
@@ -1,3 +1,4 @@
+<app-loader></app-loader>
 <div>
     <div class="d-flex justify-content-between p-3 ">
         <span class="header-label">Back</span>
