--- a/src/app/shared/presentation/component/loader/loader.component.html
+++ b/src/app/shared/presentation/component/loader/loader.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="loaderService.isLoading | async" class="position-fixed  w-100">
+<div *ngIf="loaderService.isLoading | async" style="z-index: 9999;" class="position-fixed  w-100">
     <mat-progress-bar mode="query"></mat-progress-bar>
 </div>
 <div *ngIf="canShowLoader">
