--- a/src/app/home-owner/presentation/ui/edit-house-hold/edit-house-hold.component.html
+++ b/src/app/home-owner/presentation/ui/edit-house-hold/edit-house-hold.component.html
@@ -1,3 +1,4 @@
+<mat-progress-bar *ngIf="loaderService.isLoading || true | async"  style="z-index: 9999; position: sticky; top: 0;" class="w-100" mode="query"></mat-progress-bar>
 <div class="main-container">
 
     <div class="d-flex justify-content-center py-3">
