--- a/src/app/shared/presentation/component/loader/loader.component.html
+++ b/src/app/shared/presentation/component/loader/loader.component.html
@@ -1,9 +1,6 @@
-<div *ngIf="loaderService.isLoading | async" style="z-index: 9999;" class="position-fixed  w-100">
-    <mat-progress-bar mode="query"></mat-progress-bar>
-</div>
-<div *ngIf="canShowLoader">
-    <div *ngIf="loaderService.isLoading | async" class="loader-overlay"></div>
-</div>
+<mat-progress-bar *ngIf="loaderService.isLoading || true | async" style="z-index: 9999;" class="position-fixed  w-100" mode="query"></mat-progress-bar>
+
+
 
 
 
